# practice-sort_keys

./: .cppcheck.suppress  .docker-env  .gitignore  .gitmodules  .project  .project.yml  .styleignore  CHANGELOG.md  CMakeLists.txt  Dockerfile  README.md  build  conanfile.txt  cppcheck_suppress.txt  docker-build  docker-build.sh  docker-run  docker-run.sh  docker-stop  sparsepp.cmake
.github/workflows/: cmake-single-platform.yml
cmake/: cppcheck.cmake  out_of_source_dir.cmake  pedantic.cmake  standart.cmake
scripts/: build  cpp-check  cpp-check-install  docker-build  docker-run  docker-stop  mem-check  style-check
src/: CMakeLists.txt
src/include/: bench_memory.hpp  sort_keys.hpp
src/test/: CMakeLists.txt  bench.cpp  test.cpp
